# backend/src/main/resources/api-spec.yml
@@ -19,6 +19,12 @@ paths:
     post:
       summary: Create a new session
       operationId: createSession
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Players'
       responses:
         '200':
           description: OK
@@ -97,3 +103,10 @@ components:
           type: array
           items:
             type: string
+    Players:
+      type: object
+      required:
+        - players
+      properties:
+        players:
+          type: integer
